Add Cloudinary image upload for climbs with camera support
- Add Cloudinary integration for image storage
- Install cloudinary and multer packages
- Create upload route with authentication
- Add images field to Climb model and types
- Implement image upload UI in LogClimbPage with multiple image support
- Add mobile camera capture support (capture=environment)
- Display climb images in SessionCard, ClimbCard, FeedItemCard, and ClimbDetailPage
- Show image count badge when multiple images
- Update getMySessions to include climbs like getUserSessions
- Fix auth token storage key (authToken vs token)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,8 @@ MONGODB_URI="mongodb+srv://username:password@boolder.imaso0t.mongodb.net/climbin
 JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
 PORT=3001
 NODE_ENV=development
+
+# Cloudinary Configuration
+CLOUDINARY_CLOUD_NAME="djuurctft"
+CLOUDINARY_API_KEY="417592213431584"
+CLOUDINARY_API_SECRET="707BT5H5O4M9wpAR2aJN4bOIh5A"
