--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -20,6 +20,6 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*", "../frontend/src/hooks"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
