refactor: extract session components, fix upload errors, add simpsons gif to feed
- Extract SessionCardHeader, GradeSummaryGrid, SessionStatsBar, SessionTitle, SessionFistbumpSection, SessionCommentsToggle into reusable components
- Integrate useSessionComments hook into SessionCard for cleaner comment handling
- Fix attempts field binding in LogClimb form
- Improve upload error handling with better error messages
- Add delete functionality to ClimbDetailPage
- Add collapsible comments section in SessionCard
- Import Inter font and update Tailwind config
- Add intensity labels instead of stars for session ratings
- Add simpsons.gif to FeedPage greeting
- Fix CSS animation syntax for buzz effect
- Add custom border color to Tailwind config

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Fullstack climbing logging application",
   "scripts": {
     "setup": "./setup.sh",
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "dev:backend": "cd backend && npm run dev",
     "dev:frontend": "cd frontend && npm run dev",
     "install:all": "npm run install:backend && npm run install:frontend",
@@ -12,7 +13,19 @@
     "build:backend": "cd backend && npm run build",
     "build:frontend": "cd frontend && npm run build"
   },
-  "keywords": ["climbing", "fullstack", "express", "react", "typescript"],
+  "keywords": [
+    "climbing",
+    "fullstack",
+    "express",
+    "react",
+    "typescript"
+  ],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "vite-plugin-svgr": "^4.5.0"
+  },
+  "devDependencies": {
+    "concurrently": "^9.2.1"
+  }
 }
